@@ -1,36 +1,32 @@
 package com.union.solutions.saascore.unit.application.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.union.solutions.saascore.adapters.out.persistence.OutboxEventEntity;
-import com.union.solutions.saascore.adapters.out.persistence.OutboxEventJpaRepository;
 import com.union.solutions.saascore.adapters.out.persistence.PolicyEntity;
 import com.union.solutions.saascore.adapters.out.persistence.PolicyJpaRepository;
 import com.union.solutions.saascore.application.abac.AuditLogger;
+import com.union.solutions.saascore.application.port.OutboxPublisherPort;
 import com.union.solutions.saascore.application.service.PolicyService;
 import com.union.solutions.saascore.domain.Policy;
 import io.micrometer.core.instrument.Counter;
 import java.time.Instant;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-@SuppressWarnings("null")
 class PolicyServiceTest {
 
   @Mock PolicyJpaRepository policyRepo;
-  @Mock OutboxEventJpaRepository outboxRepo;
+  @Mock OutboxPublisherPort outboxPublisher;
   @Mock AuditLogger auditLogger;
   @Mock Counter policiesUpdatedCounter;
 
@@ -40,13 +36,12 @@ class PolicyServiceTest {
   void setUp() {
     service =
         new PolicyService(
-            policyRepo, outboxRepo, auditLogger, new ObjectMapper(), policiesUpdatedCounter);
+            policyRepo, outboxPublisher, auditLogger, new ObjectMapper(), policiesUpdatedCounter);
   }
 
   @Test
   void create_savesEntityAndPublishesOutbox() {
-    when(policyRepo.save(any())).thenAnswer(inv -> Objects.requireNonNull(inv.getArgument(0)));
-    when(outboxRepo.save(any())).thenAnswer(inv -> Objects.requireNonNull(inv.getArgument(0)));
+    when(policyRepo.save(any())).thenAnswer(inv -> inv.getArgument(0));
 
     PolicyEntity result =
         service.create("test:read", Policy.Effect.ALLOW, List.of("pro"), List.of(), true, "note");
@@ -56,32 +51,23 @@ class PolicyServiceTest {
     assertThat(result.isEnabled()).isTrue();
 
     verify(policyRepo).save(any(PolicyEntity.class));
-
-    ArgumentCaptor<OutboxEventEntity> outboxCaptor =
-        ArgumentCaptor.forClass(OutboxEventEntity.class);
-    verify(outboxRepo).save(outboxCaptor.capture());
-    assertThat(outboxCaptor.getValue().getEventType()).isEqualTo("policy.created");
-    assertThat(outboxCaptor.getValue().getAggregateType()).isEqualTo("POLICY");
+    verify(outboxPublisher).publish(eq("POLICY"), anyString(), eq("policy.created"), anyMap());
   }
 
   @Test
   void softDelete_setsDeletedFlag() {
     UUID id = UUID.randomUUID();
     PolicyEntity entity = makePolicyEntity(id, "test:delete");
-    when(policyRepo.findActiveById(id)).thenReturn(Optional.of(Objects.requireNonNull(entity)));
-    when(policyRepo.save(any())).thenAnswer(inv -> Objects.requireNonNull(inv.getArgument(0)));
-    when(outboxRepo.save(any())).thenAnswer(inv -> Objects.requireNonNull(inv.getArgument(0)));
+    when(policyRepo.findActiveById(id)).thenReturn(Optional.of(entity));
+    when(policyRepo.save(any())).thenAnswer(inv -> inv.getArgument(0));
 
     boolean result = service.softDelete(id);
 
     assertThat(result).isTrue();
     assertThat(entity.isDeleted()).isTrue();
     assertThat(entity.getDeletedAt()).isNotNull();
-
-    ArgumentCaptor<OutboxEventEntity> outboxCaptor =
-        ArgumentCaptor.forClass(OutboxEventEntity.class);
-    verify(outboxRepo).save(outboxCaptor.capture());
-    assertThat(outboxCaptor.getValue().getEventType()).isEqualTo("policy.deleted");
+    verify(outboxPublisher)
+        .publish(eq("POLICY"), eq(id.toString()), eq("policy.deleted"), anyMap());
   }
 
   @Test
@@ -99,9 +85,8 @@ class PolicyServiceTest {
   void update_modifiesFields() {
     UUID id = UUID.randomUUID();
     PolicyEntity entity = makePolicyEntity(id, "test:update");
-    when(policyRepo.findActiveById(id)).thenReturn(Optional.of(Objects.requireNonNull(entity)));
-    when(policyRepo.save(any())).thenAnswer(inv -> Objects.requireNonNull(inv.getArgument(0)));
-    when(outboxRepo.save(any())).thenAnswer(inv -> Objects.requireNonNull(inv.getArgument(0)));
+    when(policyRepo.findActiveById(id)).thenReturn(Optional.of(entity));
+    when(policyRepo.save(any())).thenAnswer(inv -> inv.getArgument(0));
 
     Optional<PolicyEntity> result =
         service.update(id, null, Policy.Effect.DENY, null, null, false, "updated");
@@ -123,11 +108,11 @@ class PolicyServiceTest {
     p2.setAllowedPlans("[]");
     p2.setAllowedRegions("[\"eu-west-1\"]");
 
-    when(policyRepo.findByEnabledTrue()).thenReturn(List.of(Objects.requireNonNull(p1), Objects.requireNonNull(p2)));
+    when(policyRepo.findByEnabledTrue()).thenReturn(List.of(p1, p2));
 
     List<PolicyEntity> result = service.getApplicablePolicies("pro", "us-east-1");
     assertThat(result).hasSize(1);
-    assertThat(result.get(0).getPermissionCode()).isEqualTo("test:a");
+    assertThat(result.getFirst().getPermissionCode()).isEqualTo("test:a");
   }
 
   private PolicyEntity makePolicyEntity(UUID id, String permCode) {
